// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`prints help message 1`] = `
"
error: null
signal: null
status: 1
stderr: |+

  clean-typescript-build <directory> [options]

  Clean TypeScript compilation products

  Options:
    --version     Show version number                                    [boolean]
    --help        Show help                                              [boolean]
    --directory   Directory that contains source files                    [string]
    --dry, -u     List files without deletion           [boolean] [default: false]
    --format, -f  Format of output to be printed to stdout
                               [choices: \\"text\\", \\"json\\", \\"none\\"] [default: \\"text\\"]
    --jsonIndent  JSON indentation when --format=json        [number] [default: 2]

  Not enough non-option arguments: got 0, need at least 1

stdout: ((EMPTY))

"
`;

exports[`prints help message 2`] = `
"
error: null
signal: null
status: 0
stderr: ((EMPTY))
stdout: |+

  clean-typescript-build <directory> [options]

  Clean TypeScript compilation products

  Options:
    --version     Show version number                                    [boolean]
    --help        Show help                                              [boolean]
    --directory   Directory that contains source files                    [string]
    --dry, -u     List files without deletion           [boolean] [default: false]
    --format, -f  Format of output to be printed to stdout
                               [choices: \\"text\\", \\"json\\", \\"none\\"] [default: \\"text\\"]
    --jsonIndent  JSON indentation when --format=json        [number] [default: 2]


"
`;

exports[`works when directory exists with --dry 1`] = `
"
error: null
signal: null
status: 0
stderr: ((EMPTY))
stdout: |+

  TypeScript Cleaner

  Detected 17 files to delete

  Deleted 17 files
    → root/to-be-cleaned/src-and-out/incompleted-out/file.js
    → root/to-be-cleaned/src-and-out/ts-ext/file.js
    → root/to-be-cleaned/src-and-out/ts-ext/file.js.map
    → root/to-be-cleaned/src-and-out/ts-ext/file.jsx
    → root/to-be-cleaned/src-and-out/ts-ext/file.jsx.map
    → root/to-be-cleaned/src-and-out/ts-ext/file.d.ts
    → root/to-be-cleaned/src-and-out/ts-ext/file.d.ts.map
    → root/to-be-cleaned/src-and-out/ts-ext/file.d.tsx
    → root/to-be-cleaned/src-and-out/ts-ext/file.d.tsx.map
    → root/to-be-cleaned/src-and-out/tsx-ext/file.js
    → root/to-be-cleaned/src-and-out/tsx-ext/file.js.map
    → root/to-be-cleaned/src-and-out/tsx-ext/file.jsx
    → root/to-be-cleaned/src-and-out/tsx-ext/file.jsx.map
    → root/to-be-cleaned/src-and-out/tsx-ext/file.d.ts
    → root/to-be-cleaned/src-and-out/tsx-ext/file.d.ts.map
    → root/to-be-cleaned/src-and-out/tsx-ext/file.d.tsx
    → root/to-be-cleaned/src-and-out/tsx-ext/file.d.tsx.map

  Failed to delete 0 files


"
`;

exports[`works when directory exists with --format=json 1`] = `
"
error: null
signal: null
status: 0
stderr: ((EMPTY))
stdout: |+

  {
    \\"targets\\": [
      \\"root/to-be-cleaned/src-and-out/incompleted-out/file.js\\",
      \\"root/to-be-cleaned/src-and-out/ts-ext/file.js\\",
      \\"root/to-be-cleaned/src-and-out/ts-ext/file.js.map\\",
      \\"root/to-be-cleaned/src-and-out/ts-ext/file.jsx\\",
      \\"root/to-be-cleaned/src-and-out/ts-ext/file.jsx.map\\",
      \\"root/to-be-cleaned/src-and-out/ts-ext/file.d.ts\\",
      \\"root/to-be-cleaned/src-and-out/ts-ext/file.d.ts.map\\",
      \\"root/to-be-cleaned/src-and-out/ts-ext/file.d.tsx\\",
      \\"root/to-be-cleaned/src-and-out/ts-ext/file.d.tsx.map\\",
      \\"root/to-be-cleaned/src-and-out/tsx-ext/file.js\\",
      \\"root/to-be-cleaned/src-and-out/tsx-ext/file.js.map\\",
      \\"root/to-be-cleaned/src-and-out/tsx-ext/file.jsx\\",
      \\"root/to-be-cleaned/src-and-out/tsx-ext/file.jsx.map\\",
      \\"root/to-be-cleaned/src-and-out/tsx-ext/file.d.ts\\",
      \\"root/to-be-cleaned/src-and-out/tsx-ext/file.d.ts.map\\",
      \\"root/to-be-cleaned/src-and-out/tsx-ext/file.d.tsx\\",
      \\"root/to-be-cleaned/src-and-out/tsx-ext/file.d.tsx.map\\"
    ],
    \\"success\\": [
      \\"root/to-be-cleaned/src-and-out/incompleted-out/file.js\\",
      \\"root/to-be-cleaned/src-and-out/ts-ext/file.js\\",
      \\"root/to-be-cleaned/src-and-out/ts-ext/file.js.map\\",
      \\"root/to-be-cleaned/src-and-out/ts-ext/file.jsx\\",
      \\"root/to-be-cleaned/src-and-out/ts-ext/file.jsx.map\\",
      \\"root/to-be-cleaned/src-and-out/ts-ext/file.d.ts\\",
      \\"root/to-be-cleaned/src-and-out/ts-ext/file.d.ts.map\\",
      \\"root/to-be-cleaned/src-and-out/ts-ext/file.d.tsx\\",
      \\"root/to-be-cleaned/src-and-out/ts-ext/file.d.tsx.map\\",
      \\"root/to-be-cleaned/src-and-out/tsx-ext/file.js\\",
      \\"root/to-be-cleaned/src-and-out/tsx-ext/file.js.map\\",
      \\"root/to-be-cleaned/src-and-out/tsx-ext/file.jsx\\",
      \\"root/to-be-cleaned/src-and-out/tsx-ext/file.jsx.map\\",
      \\"root/to-be-cleaned/src-and-out/tsx-ext/file.d.ts\\",
      \\"root/to-be-cleaned/src-and-out/tsx-ext/file.d.ts.map\\",
      \\"root/to-be-cleaned/src-and-out/tsx-ext/file.d.tsx\\",
      \\"root/to-be-cleaned/src-and-out/tsx-ext/file.d.tsx.map\\"
    ],
    \\"failure\\": [],
    \\"reasons\\": {}
  }


"
`;

exports[`works when directory exists with --format=json 2`] = `
Object {
  "deletedFileContents": Array [
    Object {
      "content": "Should be deleted",
      "filename": "root/to-be-cleaned/src-and-out/incompleted-out/file.js",
    },
    Object {
      "content": "Should be deleted",
      "filename": "root/to-be-cleaned/src-and-out/ts-ext/file.d.ts",
    },
    Object {
      "content": "Should be deleted",
      "filename": "root/to-be-cleaned/src-and-out/ts-ext/file.d.ts.map",
    },
    Object {
      "content": "Should be deleted",
      "filename": "root/to-be-cleaned/src-and-out/ts-ext/file.d.tsx",
    },
    Object {
      "content": "Should be deleted",
      "filename": "root/to-be-cleaned/src-and-out/ts-ext/file.d.tsx.map",
    },
    Object {
      "content": "Should be deleted",
      "filename": "root/to-be-cleaned/src-and-out/ts-ext/file.js",
    },
    Object {
      "content": "Should be deleted",
      "filename": "root/to-be-cleaned/src-and-out/ts-ext/file.js.map",
    },
    Object {
      "content": "Should be deleted",
      "filename": "root/to-be-cleaned/src-and-out/ts-ext/file.jsx",
    },
    Object {
      "content": "Should be deleted",
      "filename": "root/to-be-cleaned/src-and-out/ts-ext/file.jsx.map",
    },
    Object {
      "content": "Should be deleted",
      "filename": "root/to-be-cleaned/src-and-out/tsx-ext/file.d.ts",
    },
    Object {
      "content": "Should be deleted",
      "filename": "root/to-be-cleaned/src-and-out/tsx-ext/file.d.ts.map",
    },
    Object {
      "content": "Should be deleted",
      "filename": "root/to-be-cleaned/src-and-out/tsx-ext/file.d.tsx",
    },
    Object {
      "content": "Should be deleted",
      "filename": "root/to-be-cleaned/src-and-out/tsx-ext/file.d.tsx.map",
    },
    Object {
      "content": "Should be deleted",
      "filename": "root/to-be-cleaned/src-and-out/tsx-ext/file.js",
    },
    Object {
      "content": "Should be deleted",
      "filename": "root/to-be-cleaned/src-and-out/tsx-ext/file.js.map",
    },
    Object {
      "content": "Should be deleted",
      "filename": "root/to-be-cleaned/src-and-out/tsx-ext/file.jsx",
    },
    Object {
      "content": "Should be deleted",
      "filename": "root/to-be-cleaned/src-and-out/tsx-ext/file.jsx.map",
    },
  ],
  "remainingFileContents": Array [
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-cleaned/src-and-out/incompleted-out/file.ts",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-cleaned/src-and-out/ts-ext/file.ts",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-cleaned/src-and-out/tsx-ext/file.tsx",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/folders/file.ts",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/ignored/direct-node-modules-descendants/node_modules/file.d.ts",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/ignored/direct-node-modules-descendants/node_modules/file.d.ts.map",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/ignored/direct-node-modules-descendants/node_modules/file.d.tsx",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/ignored/direct-node-modules-descendants/node_modules/file.d.tsx.map",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/ignored/direct-node-modules-descendants/node_modules/file.js",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/ignored/direct-node-modules-descendants/node_modules/file.js.map",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/ignored/direct-node-modules-descendants/node_modules/file.jsx",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/ignored/direct-node-modules-descendants/node_modules/file.jsx.map",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/ignored/direct-node-modules-descendants/node_modules/file.ts",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/ignored/direct-node-modules-descendants/node_modules/file.tsx",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/ignored/indirect-node-modules-descendants/node_modules/a-dummy-package/file.d.ts",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/ignored/indirect-node-modules-descendants/node_modules/a-dummy-package/file.d.ts.map",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/ignored/indirect-node-modules-descendants/node_modules/a-dummy-package/file.d.tsx",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/ignored/indirect-node-modules-descendants/node_modules/a-dummy-package/file.d.tsx.map",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/ignored/indirect-node-modules-descendants/node_modules/a-dummy-package/file.js",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/ignored/indirect-node-modules-descendants/node_modules/a-dummy-package/file.js.map",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/ignored/indirect-node-modules-descendants/node_modules/a-dummy-package/file.jsx",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/ignored/indirect-node-modules-descendants/node_modules/a-dummy-package/file.jsx.map",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/ignored/indirect-node-modules-descendants/node_modules/a-dummy-package/file.ts",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/ignored/indirect-node-modules-descendants/node_modules/a-dummy-package/file.tsx",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/out-only/file.d.ts",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/out-only/file.d.ts.map",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/out-only/file.d.tsx",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/out-only/file.d.tsx.map",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/out-only/file.js",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/out-only/file.js.map",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/out-only/file.jsx",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/out-only/file.jsx.map",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/src-only/file.ts",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/src-only/file.tsx",
    },
  ],
  "targets": Array [
    "root/to-be-cleaned/src-and-out/incompleted-out/file.js",
    "root/to-be-cleaned/src-and-out/ts-ext/file.d.ts",
    "root/to-be-cleaned/src-and-out/ts-ext/file.d.ts.map",
    "root/to-be-cleaned/src-and-out/ts-ext/file.d.tsx",
    "root/to-be-cleaned/src-and-out/ts-ext/file.d.tsx.map",
    "root/to-be-cleaned/src-and-out/ts-ext/file.js",
    "root/to-be-cleaned/src-and-out/ts-ext/file.js.map",
    "root/to-be-cleaned/src-and-out/ts-ext/file.jsx",
    "root/to-be-cleaned/src-and-out/ts-ext/file.jsx.map",
    "root/to-be-cleaned/src-and-out/tsx-ext/file.d.ts",
    "root/to-be-cleaned/src-and-out/tsx-ext/file.d.ts.map",
    "root/to-be-cleaned/src-and-out/tsx-ext/file.d.tsx",
    "root/to-be-cleaned/src-and-out/tsx-ext/file.d.tsx.map",
    "root/to-be-cleaned/src-and-out/tsx-ext/file.js",
    "root/to-be-cleaned/src-and-out/tsx-ext/file.js.map",
    "root/to-be-cleaned/src-and-out/tsx-ext/file.jsx",
    "root/to-be-cleaned/src-and-out/tsx-ext/file.jsx.map",
  ],
}
`;

exports[`works when directory exists with --format=none 1`] = `
"
error: null
signal: null
status: 0
stderr: ((EMPTY))
stdout: ((EMPTY))

"
`;

exports[`works when directory exists with --format=none 2`] = `
Object {
  "deletedFileContents": Array [
    Object {
      "content": "Should be deleted",
      "filename": "root/to-be-cleaned/src-and-out/incompleted-out/file.js",
    },
    Object {
      "content": "Should be deleted",
      "filename": "root/to-be-cleaned/src-and-out/ts-ext/file.d.ts",
    },
    Object {
      "content": "Should be deleted",
      "filename": "root/to-be-cleaned/src-and-out/ts-ext/file.d.ts.map",
    },
    Object {
      "content": "Should be deleted",
      "filename": "root/to-be-cleaned/src-and-out/ts-ext/file.d.tsx",
    },
    Object {
      "content": "Should be deleted",
      "filename": "root/to-be-cleaned/src-and-out/ts-ext/file.d.tsx.map",
    },
    Object {
      "content": "Should be deleted",
      "filename": "root/to-be-cleaned/src-and-out/ts-ext/file.js",
    },
    Object {
      "content": "Should be deleted",
      "filename": "root/to-be-cleaned/src-and-out/ts-ext/file.js.map",
    },
    Object {
      "content": "Should be deleted",
      "filename": "root/to-be-cleaned/src-and-out/ts-ext/file.jsx",
    },
    Object {
      "content": "Should be deleted",
      "filename": "root/to-be-cleaned/src-and-out/ts-ext/file.jsx.map",
    },
    Object {
      "content": "Should be deleted",
      "filename": "root/to-be-cleaned/src-and-out/tsx-ext/file.d.ts",
    },
    Object {
      "content": "Should be deleted",
      "filename": "root/to-be-cleaned/src-and-out/tsx-ext/file.d.ts.map",
    },
    Object {
      "content": "Should be deleted",
      "filename": "root/to-be-cleaned/src-and-out/tsx-ext/file.d.tsx",
    },
    Object {
      "content": "Should be deleted",
      "filename": "root/to-be-cleaned/src-and-out/tsx-ext/file.d.tsx.map",
    },
    Object {
      "content": "Should be deleted",
      "filename": "root/to-be-cleaned/src-and-out/tsx-ext/file.js",
    },
    Object {
      "content": "Should be deleted",
      "filename": "root/to-be-cleaned/src-and-out/tsx-ext/file.js.map",
    },
    Object {
      "content": "Should be deleted",
      "filename": "root/to-be-cleaned/src-and-out/tsx-ext/file.jsx",
    },
    Object {
      "content": "Should be deleted",
      "filename": "root/to-be-cleaned/src-and-out/tsx-ext/file.jsx.map",
    },
  ],
  "remainingFileContents": Array [
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-cleaned/src-and-out/incompleted-out/file.ts",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-cleaned/src-and-out/ts-ext/file.ts",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-cleaned/src-and-out/tsx-ext/file.tsx",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/folders/file.ts",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/ignored/direct-node-modules-descendants/node_modules/file.d.ts",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/ignored/direct-node-modules-descendants/node_modules/file.d.ts.map",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/ignored/direct-node-modules-descendants/node_modules/file.d.tsx",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/ignored/direct-node-modules-descendants/node_modules/file.d.tsx.map",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/ignored/direct-node-modules-descendants/node_modules/file.js",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/ignored/direct-node-modules-descendants/node_modules/file.js.map",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/ignored/direct-node-modules-descendants/node_modules/file.jsx",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/ignored/direct-node-modules-descendants/node_modules/file.jsx.map",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/ignored/direct-node-modules-descendants/node_modules/file.ts",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/ignored/direct-node-modules-descendants/node_modules/file.tsx",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/ignored/indirect-node-modules-descendants/node_modules/a-dummy-package/file.d.ts",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/ignored/indirect-node-modules-descendants/node_modules/a-dummy-package/file.d.ts.map",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/ignored/indirect-node-modules-descendants/node_modules/a-dummy-package/file.d.tsx",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/ignored/indirect-node-modules-descendants/node_modules/a-dummy-package/file.d.tsx.map",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/ignored/indirect-node-modules-descendants/node_modules/a-dummy-package/file.js",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/ignored/indirect-node-modules-descendants/node_modules/a-dummy-package/file.js.map",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/ignored/indirect-node-modules-descendants/node_modules/a-dummy-package/file.jsx",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/ignored/indirect-node-modules-descendants/node_modules/a-dummy-package/file.jsx.map",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/ignored/indirect-node-modules-descendants/node_modules/a-dummy-package/file.ts",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/ignored/indirect-node-modules-descendants/node_modules/a-dummy-package/file.tsx",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/out-only/file.d.ts",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/out-only/file.d.ts.map",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/out-only/file.d.tsx",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/out-only/file.d.tsx.map",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/out-only/file.js",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/out-only/file.js.map",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/out-only/file.jsx",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/out-only/file.jsx.map",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/src-only/file.ts",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/src-only/file.tsx",
    },
  ],
  "targets": Array [
    "root/to-be-cleaned/src-and-out/incompleted-out/file.js",
    "root/to-be-cleaned/src-and-out/ts-ext/file.d.ts",
    "root/to-be-cleaned/src-and-out/ts-ext/file.d.ts.map",
    "root/to-be-cleaned/src-and-out/ts-ext/file.d.tsx",
    "root/to-be-cleaned/src-and-out/ts-ext/file.d.tsx.map",
    "root/to-be-cleaned/src-and-out/ts-ext/file.js",
    "root/to-be-cleaned/src-and-out/ts-ext/file.js.map",
    "root/to-be-cleaned/src-and-out/ts-ext/file.jsx",
    "root/to-be-cleaned/src-and-out/ts-ext/file.jsx.map",
    "root/to-be-cleaned/src-and-out/tsx-ext/file.d.ts",
    "root/to-be-cleaned/src-and-out/tsx-ext/file.d.ts.map",
    "root/to-be-cleaned/src-and-out/tsx-ext/file.d.tsx",
    "root/to-be-cleaned/src-and-out/tsx-ext/file.d.tsx.map",
    "root/to-be-cleaned/src-and-out/tsx-ext/file.js",
    "root/to-be-cleaned/src-and-out/tsx-ext/file.js.map",
    "root/to-be-cleaned/src-and-out/tsx-ext/file.jsx",
    "root/to-be-cleaned/src-and-out/tsx-ext/file.jsx.map",
  ],
}
`;

exports[`works when directory exists without options 1`] = `
"
error: null
signal: null
status: 0
stderr: ((EMPTY))
stdout: |+

  TypeScript Cleaner

  Detected 17 files to delete

  Deleted 17 files
    → root/to-be-cleaned/src-and-out/incompleted-out/file.js
    → root/to-be-cleaned/src-and-out/ts-ext/file.js
    → root/to-be-cleaned/src-and-out/ts-ext/file.js.map
    → root/to-be-cleaned/src-and-out/ts-ext/file.jsx
    → root/to-be-cleaned/src-and-out/ts-ext/file.jsx.map
    → root/to-be-cleaned/src-and-out/ts-ext/file.d.ts
    → root/to-be-cleaned/src-and-out/ts-ext/file.d.ts.map
    → root/to-be-cleaned/src-and-out/ts-ext/file.d.tsx
    → root/to-be-cleaned/src-and-out/ts-ext/file.d.tsx.map
    → root/to-be-cleaned/src-and-out/tsx-ext/file.js
    → root/to-be-cleaned/src-and-out/tsx-ext/file.js.map
    → root/to-be-cleaned/src-and-out/tsx-ext/file.jsx
    → root/to-be-cleaned/src-and-out/tsx-ext/file.jsx.map
    → root/to-be-cleaned/src-and-out/tsx-ext/file.d.ts
    → root/to-be-cleaned/src-and-out/tsx-ext/file.d.ts.map
    → root/to-be-cleaned/src-and-out/tsx-ext/file.d.tsx
    → root/to-be-cleaned/src-and-out/tsx-ext/file.d.tsx.map

  Failed to delete 0 files


"
`;

exports[`works when directory exists without options 2`] = `
Object {
  "deletedFileContents": Array [
    Object {
      "content": "Should be deleted",
      "filename": "root/to-be-cleaned/src-and-out/incompleted-out/file.js",
    },
    Object {
      "content": "Should be deleted",
      "filename": "root/to-be-cleaned/src-and-out/ts-ext/file.d.ts",
    },
    Object {
      "content": "Should be deleted",
      "filename": "root/to-be-cleaned/src-and-out/ts-ext/file.d.ts.map",
    },
    Object {
      "content": "Should be deleted",
      "filename": "root/to-be-cleaned/src-and-out/ts-ext/file.d.tsx",
    },
    Object {
      "content": "Should be deleted",
      "filename": "root/to-be-cleaned/src-and-out/ts-ext/file.d.tsx.map",
    },
    Object {
      "content": "Should be deleted",
      "filename": "root/to-be-cleaned/src-and-out/ts-ext/file.js",
    },
    Object {
      "content": "Should be deleted",
      "filename": "root/to-be-cleaned/src-and-out/ts-ext/file.js.map",
    },
    Object {
      "content": "Should be deleted",
      "filename": "root/to-be-cleaned/src-and-out/ts-ext/file.jsx",
    },
    Object {
      "content": "Should be deleted",
      "filename": "root/to-be-cleaned/src-and-out/ts-ext/file.jsx.map",
    },
    Object {
      "content": "Should be deleted",
      "filename": "root/to-be-cleaned/src-and-out/tsx-ext/file.d.ts",
    },
    Object {
      "content": "Should be deleted",
      "filename": "root/to-be-cleaned/src-and-out/tsx-ext/file.d.ts.map",
    },
    Object {
      "content": "Should be deleted",
      "filename": "root/to-be-cleaned/src-and-out/tsx-ext/file.d.tsx",
    },
    Object {
      "content": "Should be deleted",
      "filename": "root/to-be-cleaned/src-and-out/tsx-ext/file.d.tsx.map",
    },
    Object {
      "content": "Should be deleted",
      "filename": "root/to-be-cleaned/src-and-out/tsx-ext/file.js",
    },
    Object {
      "content": "Should be deleted",
      "filename": "root/to-be-cleaned/src-and-out/tsx-ext/file.js.map",
    },
    Object {
      "content": "Should be deleted",
      "filename": "root/to-be-cleaned/src-and-out/tsx-ext/file.jsx",
    },
    Object {
      "content": "Should be deleted",
      "filename": "root/to-be-cleaned/src-and-out/tsx-ext/file.jsx.map",
    },
  ],
  "remainingFileContents": Array [
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-cleaned/src-and-out/incompleted-out/file.ts",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-cleaned/src-and-out/ts-ext/file.ts",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-cleaned/src-and-out/tsx-ext/file.tsx",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/folders/file.ts",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/ignored/direct-node-modules-descendants/node_modules/file.d.ts",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/ignored/direct-node-modules-descendants/node_modules/file.d.ts.map",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/ignored/direct-node-modules-descendants/node_modules/file.d.tsx",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/ignored/direct-node-modules-descendants/node_modules/file.d.tsx.map",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/ignored/direct-node-modules-descendants/node_modules/file.js",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/ignored/direct-node-modules-descendants/node_modules/file.js.map",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/ignored/direct-node-modules-descendants/node_modules/file.jsx",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/ignored/direct-node-modules-descendants/node_modules/file.jsx.map",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/ignored/direct-node-modules-descendants/node_modules/file.ts",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/ignored/direct-node-modules-descendants/node_modules/file.tsx",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/ignored/indirect-node-modules-descendants/node_modules/a-dummy-package/file.d.ts",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/ignored/indirect-node-modules-descendants/node_modules/a-dummy-package/file.d.ts.map",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/ignored/indirect-node-modules-descendants/node_modules/a-dummy-package/file.d.tsx",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/ignored/indirect-node-modules-descendants/node_modules/a-dummy-package/file.d.tsx.map",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/ignored/indirect-node-modules-descendants/node_modules/a-dummy-package/file.js",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/ignored/indirect-node-modules-descendants/node_modules/a-dummy-package/file.js.map",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/ignored/indirect-node-modules-descendants/node_modules/a-dummy-package/file.jsx",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/ignored/indirect-node-modules-descendants/node_modules/a-dummy-package/file.jsx.map",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/ignored/indirect-node-modules-descendants/node_modules/a-dummy-package/file.ts",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/ignored/indirect-node-modules-descendants/node_modules/a-dummy-package/file.tsx",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/out-only/file.d.ts",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/out-only/file.d.ts.map",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/out-only/file.d.tsx",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/out-only/file.d.tsx.map",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/out-only/file.js",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/out-only/file.js.map",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/out-only/file.jsx",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/out-only/file.jsx.map",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/src-only/file.ts",
    },
    Object {
      "content": "Should be kept",
      "filename": "root/to-be-kept/src-only/file.tsx",
    },
  ],
  "targets": Array [
    "root/to-be-cleaned/src-and-out/incompleted-out/file.js",
    "root/to-be-cleaned/src-and-out/ts-ext/file.d.ts",
    "root/to-be-cleaned/src-and-out/ts-ext/file.d.ts.map",
    "root/to-be-cleaned/src-and-out/ts-ext/file.d.tsx",
    "root/to-be-cleaned/src-and-out/ts-ext/file.d.tsx.map",
    "root/to-be-cleaned/src-and-out/ts-ext/file.js",
    "root/to-be-cleaned/src-and-out/ts-ext/file.js.map",
    "root/to-be-cleaned/src-and-out/ts-ext/file.jsx",
    "root/to-be-cleaned/src-and-out/ts-ext/file.jsx.map",
    "root/to-be-cleaned/src-and-out/tsx-ext/file.d.ts",
    "root/to-be-cleaned/src-and-out/tsx-ext/file.d.ts.map",
    "root/to-be-cleaned/src-and-out/tsx-ext/file.d.tsx",
    "root/to-be-cleaned/src-and-out/tsx-ext/file.d.tsx.map",
    "root/to-be-cleaned/src-and-out/tsx-ext/file.js",
    "root/to-be-cleaned/src-and-out/tsx-ext/file.js.map",
    "root/to-be-cleaned/src-and-out/tsx-ext/file.jsx",
    "root/to-be-cleaned/src-and-out/tsx-ext/file.jsx.map",
  ],
}
`;
